--- a/examples/reporting/requirements.txt
+++ b/examples/reporting/requirements.txt
@@ -1,9 +1,8 @@
-bokeh>=1.4.0
-matplotlib >= 3.1.1 ; python_version >= '3.6'
-matplotlib >= 2.2.4 ; python_version < '3.6'
+bokeh
+matplotlib
 numpy
 pandas
-pillow>=4.0
+pillow
 plotly
 seaborn
 six
